# Immune

./: .gitignore  Makefile  README.md  config.example.env  pyproject.toml  ruff.toml
scripts/: train_model.py
src/: __init__.py  analyze_scaling_laws.py  features.py  main.py  scrap.py  train.py
src/Immune/: __init__.py  main.py
src/Immune/data/: feature_extractor.py  fetch_sorel20M.py  models.py  process_assemblagePE.py  process_dike_valtest.py  scrapper.py
src/Immune/features/: extractor.py  input_layer_formatter.py  models.py
src/Immune/models/: __init__.py  dnn_malware_detector.py  malware_detector.py  xgb_malware_detector.py
src/Immune/utils/: scaling_laws_collector.py  visualization.py
src/ember/: ember_build.py
src/utils/: visualization.py
tests/: __init__.py  test_malware_detector.py
